# gl-ai-txt

./: .gitignore  .gitmodules  README.md  bot.py  flake.nix  llm.py  prepare-wiki-data.py  pyproject.toml  run.py  v0.3.py  webui-pipeline.py
testdata/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
