[project]
name = "gl-ai-txt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.5",
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.37.37",
    "chromadb>=0.6.3",
    "ddtrace>=3.5.1",
    "faiss-cpu>=1.10.0",
    "google-generativeai>=0.8.5",
    "grpcio>=1.71.0",
    "httpx>=0.28.1",
    "langchain-community>=0.3.21",
    "langchain-core>=0.2.8",
    "langchain-ollama>=0.3.2",
    "langfuse>=2.60.3",
    "langgraph>=0.1.5",
    "llama-index>=0.10.68",
    "llama-index-llms-ollama>=0.1.6",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "openai>=1.75.0",
    "opencv-python>=4.11.0.86",
    "opik>=1.7.9",
    "pandas>=2.2.3",
    "passlib[bcrypt]==1.7.4",
    "peewee>=3.17.9",
    "pillow>=11.2.1",
    "playwright>=1.51.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pyjwt[crypto]>=2.10.1",
    "pymongo>=4.12.0",
    "python-multipart==0.0.9",
    "python-socketio>=5.13.0",
    "redis>=5.2.1",
    "requests==2.32.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.31.0",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "vertexai>=1.71.1",
    "xgboost>=3.0.0",
]
